# deepethogram

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  MANIFEST.in  README.md  environment.yml  license.txt  pyproject.toml  pytest.ini  requirements.txt  reset_venv.sh  setup.py  setup_tests.py
.github/workflows/: gpu.yml  main.yml  pre-commit.yml  release.yml
deepethogram/: __init__.py  __main__.py  base.py  callbacks.py  configuration.py  dataloaders.py  debug.py  file_io.py  losses.py  metrics.py  postprocessing.py  projects.py  schedulers.py  stoppers.py  utils.py  viz.py  zscore.py
deepethogram/conf/: augs.yaml  config.yaml  debug.yaml  feature_extractor_inference.yaml  feature_extractor_train.yaml  flow_train.yaml  gui.yaml  inference.yaml  postprocessor.yaml  sequence_inference.yaml  sequence_train.yaml  train.yaml  tune.yaml  zscore.yaml
deepethogram/data/: augs.py  dali.py  dataloaders.py  datasets.py  keypoint_utils.py  utils.py
deepethogram/feature_extractor/: __main__.py  inference.py  losses.py  train.py
deepethogram/flow_generator/: __init__.py  inference.py  losses.py  train.py  utils.py
deepethogram/gui/: custom_widgets.py  main.py  mainwindow.py  mainwindow.ui  (+1 more)
docker/: Dockerfile-full  Dockerfile-gui  Dockerfile-headless  build_and_test.sh
docs/: beta.md  code_examples.md  docker.md  file_structure.md  getting_started.md  installation.md  performance.md  testing.md  troubleshooting.md  using_CLI.md  using_code.md  using_config_files.md  using_gui.md  using_tune.md
tests/: setup_data.py  test_CLI.py  test_data.py  test_flow_generator.py  test_gui.py  test_integration.py  test_models.py  test_projects.py  test_z_score.py  test_zz_commandline.py
(+38 files in other folders)
